deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -99,8 +99,13 @@
    </a>
    <ul>
     <li>
-     <a href="#version-222">
-      Version 2.2.2
+     <a href="#version-223">
+      Version 2.2.3
+     </a>
+    </li>
+    <li>
+     <a href="#version-30-04-2024">
+      Version 30-04-2024
      </a>
     </li>
     <li>
@@ -191,8 +196,14 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
-<h2 id="version-222">
- Version 2.2.2
+<h2 id="version-223">
+ Version 2.2.3
+</h2>
+<p>
+ Released TBD
+</p>
+<h2 id="version-30-04-2024">
+ Version 30-04-2024
 </h2>
 <p>
  Released TBD
