deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -104,8 +104,8 @@
      </a>
     </li>
     <li>
-     <a href="#version-30-04-2024">
-      Version 30-04-2024
+     <a href="#version-222">
+      Version 2.2.2
      </a>
     </li>
     <li>
@@ -202,11 +202,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
-<h2 id="version-30-04-2024">
- Version 30-04-2024
+<h2 id="version-222">
+ Version 2.2.2
 </h2>
 <p>
- Released TBD
+ Released 30-04-2024
 </p>
 <ul>
  <li>
