deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -245,7 +245,7 @@ See the upgrade notes for specific information about upgrading.
   Set custom security header to properly display phpinfo-page
  </li>
  <li>
-  Hide file-upload button for metadata-converter is uploads are disabled at PHP-level
+  Hide file-upload button for metadata-converter if uploads are disabled at PHP-level
  </li>
 </ul>
 <p>
