--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -245,7 +245,7 @@ See the upgrade notes for specific information about upgrading.
   Set custom security header to properly display phpinfo-page
  </li>
  <li>
-  Hide file-upload button for metadata-converter is uploads are disabled at PHP-level
+  Hide file-upload button for metadata-converter if uploads are disabled at PHP-level
  </li>
 </ul>
 <p>
