deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -197,6 +197,19 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  adfs
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed metadata download to become a proper xml-file
+ </li>
+ <li>
+  Prevent metadata-download from ever being cached
+ </li>
+</ul>
 <h2 id="version-216">
  Version 2.1.6
 </h2>
