--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -202,6 +202,19 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  adfs
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed metadata download to become a proper xml-file
+ </li>
+ <li>
+  Prevent metadata-download from ever being cached
+ </li>
+</ul>
 <h2 id="version-222">
  Version 2.2.2
 </h2>
