--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -294,6 +294,16 @@ See the upgrade notes for specific information about upgrading.
  flag, leading
 to an incorrect error message.
 </p>
+<p>
+ <code>
+  sqlauth
+ </code>
+</p>
+<ul>
+ <li>
+  Add username_regex option (simplesamlphp/simplesamlphp-module-sqlauth#11) (v1.3.0)
+ </li>
+</ul>
 <h2 id="version-221">
  Version 2.2.1
 </h2>
