--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -186,6 +186,17 @@ See the upgrade notes for specific information about upgrading.
  Version 2.0.12
 </h2>
 <p>
+ :warning: IMPORTANT NOTE :warning:
+</p>
+<p>
+ Due to a mistake, this bugfix-release can turn out to become a backwards-incompatibility for those who override the loginuserpass.twig in their custom theme.
+Please update your theme to reflect the changes in
+ <a href="https://github.com/simplesamlphp/simplesamlphp/pull/2022/commits/691199e9b963a2861d731e6583555c7a8df39992">
+  this commit
+ </a>
+ before updating.
+</p>
+<p>
  Released 28-04-2024
 </p>
 <ul>
