--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -182,6 +182,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Added a missing use-statement that would cause a 'class not found' exception.
+ </li>
+</ul>
 <h2 id="version-2012">
  Version 2.0.12
 </h2>
