--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -197,6 +197,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Added a missing use-statement that would cause a 'class not found' exception.
+ </li>
+</ul>
 <p>
  <code>
   adfs
