deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -991,6 +991,27 @@ The following attributes are available:
  </dd>
  <dt>
   <code>
+   RequestInitiation
+  </code>
+ </dt>
+ <dd>
+  Enable the
+  <a href="https://wiki.oasis-open.org/security/RequestInitProtProf">
+   Service Provider Request Initiation Protocol
+  </a>
+  .
+  To validate the
+  <code>
+   target
+  </code>
+  the
+  <code>
+   trusted.url.domains
+  </code>
+  configuration option has to be used.
+ </dd>
+ <dt>
+  <code>
    saml.SOAPClient.certificate
   </code>
  </dt>
