deploy: a1cab1c39628dfc0105486c71f2ea66c20dda40d

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -194,7 +194,11 @@
 </div>
 <p>
  This document lists the changes between versions of SimpleSAMLphp.
-See the upgrade notes for specific information about upgrading.
+See the
+ <a href="https://simplesamlphp.org/docs/stable/simplesamlphp-upgrade-notes.html">
+  upgrade notes
+ </a>
+ for specific information about upgrading.
 </p>
 <h2 id="version-223">
  Version 2.2.3
