--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -99,6 +99,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2014">
+      Version 2.0.14
+     </a>
+    </li>
+    <li>
      <a href="#version-2013">
       Version 2.0.13
      </a>
@@ -176,15 +181,24 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
-<h2 id="version-2013">
- Version 2.0.13
+<h2 id="version-2014">
+ Version 2.0.14
 </h2>
 <p>
  Released TBD
 </p>
+<h2 id="version-2013">
+ Version 2.0.13
+</h2>
+<p>
+ Released 2024-06-12
+</p>
 <ul>
  <li>
   Added a missing use-statement that would cause a 'class not found' exception.
+ </li>
+ <li>
+  Updated composer/composer dependency (CVE-2024-35241, CVE-2024-35242)
  </li>
 </ul>
 <h2 id="version-2012">
