--- a/contrib_modules/discopower/discopower.html
+++ b/contrib_modules/discopower/discopower.html
@@ -249,7 +249,9 @@
 <span class="nv">$config</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">'default-sp'</span> <span class="o">=&gt;</span> <span class="p">[</span>
         <span class="s1">'saml:SP'</span><span class="p">,</span>
-        <span class="s1">'discoURL'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp1.example.org/simplesaml/module.php/discopower/disco.php'</span><span class="p">,</span>
+        <span class="s1">'entityID'</span> <span class="o">=&gt;</span> <span class="nx">…</span><span class="p">,</span>
+        <span class="nx">…</span>
+        <span class="s1">'discoURL'</span> <span class="o">=&gt;</span> <span class="s1">'/simplesaml/module.php/discopower/disco.php'</span><span class="p">,</span>
     <span class="p">],</span>
 <span class="p">];</span>
 </code></pre>
