--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -195,6 +195,9 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
+  Fix deprecation notice for PHP 8.3
+ </li>
+ <li>
   Added a missing use-statement that would cause a 'class not found' exception.
  </li>
  <li>
