--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -210,6 +210,9 @@ See the
  <li>
   Added a missing use-statement that would cause a 'class not found' exception.
  </li>
+ <li>
+  Improved Luxembourgish (LB) translations (#2129)
+ </li>
 </ul>
 <p>
  <code>
