--- a/devel/simplesamlphp-metadata-endpoints.html
+++ b/devel/simplesamlphp-metadata-endpoints.html
@@ -167,46 +167,8 @@
  </tbody>
 </table>
 <p>
- The various endpoints can be specified in three different ways:
+ The various endpoints can be specified in the following format:
 </p>
-<ul>
- <li>
-  A single string.
- </li>
- <li>
-  Array of strings.
- </li>
- <li>
-  Array of arrays.
- </li>
-</ul>
-<h2 id="a-single-string">
- A single string
-</h2>
-<div class="codehilite">
- <pre><span></span><code>  'AssertionConsumerService' =&gt; 'https://sp.example.org/ACS',
-</code></pre>
-</div>
-<p>
- This is the simplest endpoint format.
-It can be used when there is only a single endpoint that uses the default binding.
-</p>
-<h2 id="array-of-strings">
- Array of strings
-</h2>
-<div class="codehilite">
- <pre><span></span><code>  'AssertionConsumerService' =&gt; [
-      'https://site1.example.org/ACS',
-      'https://site2.example.org/ACS',
-  ],
-</code></pre>
-</div>
-<p>
- This endpoint format can be used to represent multiple endpoints, all of which use the default binding.
-</p>
-<h2 id="array-of-arrays">
- Array of arrays
-</h2>
 <div class="codehilite">
  <pre><span></span><code>  'AssertionConsumerService' =&gt; [
       [
