--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -211,7 +211,7 @@ See the
   Added a missing use-statement that would cause a 'class not found' exception.
  </li>
  <li>
-  Improved Luxembourgish (LB) translations (#2129)
+  Improved Luxembourgish (LB) translations (#2129, #2140)
  </li>
 </ul>
 <p>
