--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -213,6 +213,9 @@ See the
  <li>
   Improved Luxembourgish (LB) translations (#2129, #2140)
  </li>
+ <li>
+  Fix regression introduced in v2.2.2 regarding autofilling usernames.
+ </li>
 </ul>
 <p>
  <code>
