--- a/2.2/simplesamlphp-install-repo.html
+++ b/2.2/simplesamlphp-install-repo.html
@@ -146,6 +146,24 @@ cp<span class="w"> </span>metadata/saml20-sp-remote.php.dist<span class="w"> </s
 </code></pre>
 </div>
 <p>
+ The default config.php has a setting
+ <code>
+  cachedir
+ </code>
+ which defaults to
+ <code>
+  /var/cache/simplesamlphp
+ </code>
+ . This directory should exist and be
+writable by the web server user. You may like to consider something
+like the ACL commands from the
+ <a href="https://symfony.com/doc/current/setup/file_permissions.html#1-using-acl-on-a-system-that-supports-setfacl-linux-bsd">
+  Symfony
+website
+ </a>
+ to enable access to this cache directory.
+</p>
+<p>
  Install the external dependencies with Composer (you can refer to
  <a href="https://getcomposer.org/">
   getcomposer.org
