--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -205,6 +205,13 @@ See the
  <li>
   Added a missing use-statement that would cause a 'class not found' exception.
  </li>
+ <li>
+  Restore the possibility to set
+  <code>
+   trusted.url.domains
+  </code>
+  to null
+ </li>
 </ul>
 <p>
  <code>
