--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -216,6 +216,13 @@ See the
  <li>
   Fix regression introduced in v2.2.2 regarding autofilling usernames.
  </li>
+ <li>
+  Restore the possibility to set
+  <code>
+   trusted.url.domains
+  </code>
+  to null
+ </li>
 </ul>
 <p>
  <code>
