--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -239,6 +239,16 @@ See the
 </ul>
 <p>
  <code>
+  authorize
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed logout button (simplesamlphp/simplesamlphp-module-authorize##16)
+ </li>
+</ul>
+<p>
+ <code>
   ldap
  </code>
 </p>
