--- a/contributed_modules.html
+++ b/contributed_modules.html
@@ -816,6 +816,23 @@
  <li>
   <dl>
    <dt>
+    simplesamlphp-module-testauthsource
+   </dt>
+   <dd>
+    A repository for test authsources for the test suite. This might be merged into simplesamlphp-test-framework but I am making it a module for now as Auth source examples are modules
+   </dd>
+  </dl>
+  <ul>
+   <li>
+    <a href="https://github.com/simplesamlphp/simplesamlphp-module-testauthsource">
+     Repository
+    </a>
+   </li>
+  </ul>
+ </li>
+ <li>
+  <dl>
+   <dt>
     simplesamlphp-module-webauthn
    </dt>
    <dd>
