--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -244,7 +244,7 @@ See the
 </p>
 <ul>
  <li>
-  Fixed logout button (simplesamlphp/simplesamlphp-module-authorize##16)
+  Fixed logout button (simplesamlphp/simplesamlphp-module-authorize#16)
  </li>
 </ul>
 <p>
