--- a/contrib_modules/authorize/authorize.html
+++ b/contrib_modules/authorize/authorize.html
@@ -230,6 +230,23 @@ If set to FALSE, the user will not be shown a button to re-authenticate.
  : This option needs to be boolean (TRUE/FALSE) else it will be
           considered FALSE.
 </p>
+<h3 id="show_user_attribute">
+ <code>
+  show_user_attribute
+ </code>
+</h3>
+<p>
+ This option can be used to show the user attribute, to inform the with which
+account they are logged in. If set to a valid attribute, the user will see
+the first value of that attribute.
+</p>
+<p>
+ <strong>
+  Note
+ </strong>
+ : This option needs to be a string else it will be considered disabled.
+          Default value is NULL.
+</p>
 <h2 id="attribute-rules">
  Attribute Rules
 </h2>
