--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -99,6 +99,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-224">
+      Version 2.2.4
+     </a>
+    </li>
+    <li>
      <a href="#version-223">
       Version 2.2.3
      </a>
@@ -200,11 +205,17 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-224">
+ Version 2.2.4
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-223">
  Version 2.2.3
 </h2>
 <p>
- Released TBD
+ Released 2024-08-20
 </p>
 <ul>
  <li>
@@ -222,6 +233,15 @@ See the
    trusted.url.domains
   </code>
   to null
+ </li>
+ <li>
+  Improved documentation on cachedir-setting (#2153)
+ </li>
+ <li>
+  Fix bug in post.twig (#2161)
+ </li>
+ <li>
+  Fix MDQ cache file bugs (#2200)
  </li>
 </ul>
 <p>
@@ -244,7 +264,7 @@ See the
 </p>
 <ul>
  <li>
-  Fixed logout button (simplesamlphp/simplesamlphp-module-authorize#16)
+  Fixed logout button (simplesamlphp/simplesamlphp-module-authorize#16) (v1.4.1)
  </li>
 </ul>
 <p>
@@ -270,6 +290,26 @@ See the
   (v2.3.6).
  </li>
 </ul>
+<p>
+ <code>
+  metarefresh
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed incorrect parsing of configuration (v1.2.2)
+ </li>
+</ul>
+<p>
+ <code>
+  radius
+ </code>
+</p>
+<ul>
+ <li>
+  Fixed security bug known as Blast-Radius (CVE-2024-3596) (simplesamlphp/simplesamlphp-module-radius#10) (v2.0.2)
+ </li>
+</ul>
 <h2 id="version-222">
  Version 2.2.2
 </h2>
@@ -285,7 +325,7 @@ Please update your theme to reflect the changes in
  before updating.
 </p>
 <p>
- Released 30-04-2024
+ Released 2024-04-30
 </p>
 <ul>
  <li>
