deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html
+++ b/contrib_modules/metarefresh/simplesamlphp-automated_metadata.html
@@ -474,6 +474,10 @@ be sure to use them from the authoritative source.
   be extracted from the certificate and everything else will be ignored. So it is
   possible to use a self signed certificate that has expired. Add more than one
   certificate to be able to handle key rollover.
+  <div class="codehilite">
+   <pre><span></span><code><span class="n">Note</span><span class="o">:</span><span class="w"> </span><span class="n">certificates</span><span class="w"> </span><span class="n">files</span><span class="w"> </span><span class="n">must</span><span class="w"> </span><span class="n">be</span><span class="w"> </span><span class="n">formatted</span><span class="w"> </span><span class="k">in</span><span class="w"> </span><span class="n">PEM</span><span class="w"> </span><span class="n">format</span><span class="o">.</span>
+</code></pre>
+  </div>
  </dd>
  <dt>
   <code>
