--- a/2.3/simplesamlphp-upgrade-notes.html
+++ b/2.3/simplesamlphp-upgrade-notes.html
@@ -102,6 +102,11 @@ from older versions of SimpleSAMLphp:
 </p>
 <ul>
  <li>
+  <a href="simplesamlphp-upgrade-notes-2.3.html">
+   Upgrade notes for version 2.3
+  </a>
+ </li>
+ <li>
   <a href="simplesamlphp-upgrade-notes-2.2.html">
    Upgrade notes for version 2.2
   </a>
