deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -245,6 +245,9 @@ See the
  <li>
   Fix: preloaded resource not used (#2207)
  </li>
+ <li>
+  BC-break (unintentional): plain-text admin-password are no longer allowed (#2113)
+ </li>
 </ul>
 <p>
  <code>
