--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -245,6 +245,9 @@ See the
  <li>
   Fix: preloaded resource not used (#2207)
  </li>
+ <li>
+  BC-break (unintentional): plain-text admin-password are no longer allowed (#2113)
+ </li>
 </ul>
 <p>
  <code>
