deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -216,6 +216,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Run ob_end_clean() on configuration file parsing error (#2219)
+ </li>
+</ul>
 <h2 id="version-223">
  Version 2.2.3
 </h2>
