deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-231">
+      Version 2.3.1
+     </a>
+    </li>
+    <li>
      <a href="#version-230">
       Version 2.3.0
      </a>
@@ -217,6 +222,31 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-231">
+ Version 2.3.1
+</h2>
+<p>
+ Released TBD
+</p>
+<ul>
+ <li>
+  Fixed accidental backwards incompatibility for plain-text admin passwords (#2212)
+ </li>
+ <li>
+  Fixed accidental backwards incompatibility concerning the
+  <code>
+   pt-br
+  </code>
+  and
+  <code>
+   zh-tw
+  </code>
+  locales (#2216)
+ </li>
+ <li>
+  Run ob_end_clean() on configuration file parsing error (#2219)
+ </li>
+</ul>
 <h2 id="version-230">
  Version 2.3.0
 </h2>
