--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -221,6 +221,16 @@ See the
   Run ob_end_clean() on configuration file parsing error (#2219)
  </li>
 </ul>
+<p>
+ <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Fix metadata-viewer to output a valid PHP array
+ </li>
+</ul>
 <h2 id="version-223">
  Version 2.2.3
 </h2>
