--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -247,6 +247,16 @@ See the
   Run ob_end_clean() on configuration file parsing error (#2219)
  </li>
 </ul>
+<p>
+ <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Fix metadata-viewer to output a valid PHP array
+ </li>
+</ul>
 <h2 id="version-230">
  Version 2.3.0
 </h2>
