deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -192,6 +192,16 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<p>
+ <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Fix metadata-viewer to output a valid PHP array
+ </li>
+</ul>
 <h2 id="version-2013">
  Version 2.0.13
 </h2>
