--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -233,6 +233,16 @@ See the
 </ul>
 <p>
  <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Fix metadata-viewer to output a valid PHP array
+ </li>
+</ul>
+<p>
+ <code>
   ldap
  </code>
 </p>
