--- a/2.3/simplesamlphp-upgrade-notes-2.3.html
+++ b/2.3/simplesamlphp-upgrade-notes-2.3.html
@@ -185,12 +185,17 @@ The following changes are relevant for installers and/or developers.
 <ul>
  <li>
   <p>
-   Plain-text admin-passwords are no longer allowed.
-  Please use the
+   As of 2.3.1+ Plain-text admin-passwords are allowed again.
+  No change is needed to auth.adminpassword to upgrade from 2.2 to 2.3.1+.
+  In 2.3.0 only Plain-text admin-passwords were not allowed.
+  </p>
+  <p>
+   In either case you might like to use the
    <code>
     bin/pwgen.php
    </code>
-   script to generate a secure password hash.
+   script to
+generate a secure password hash for auth.adminpassword.
   </p>
  </li>
  <li>
