--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -233,7 +233,7 @@ See the
   Fixed accidental backwards incompatibility for plain-text admin passwords (#2212)
  </li>
  <li>
-  Fixed accidental backwards incompatibility concerning the
+  Fixed support for
   <code>
    pt-br
   </code>
@@ -241,7 +241,7 @@ See the
   <code>
    zh-tw
   </code>
-  locales (#2216)
+  dialects (#2216)
  </li>
  <li>
   Run ob_end_clean() on configuration file parsing error (#2219)
