deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -256,6 +256,17 @@ See the
  <li>
   Fix metadata-viewer to output a valid PHP array
  </li>
+ <li>
+  Fix text-overflow of the metadata-converter output-box
+ </li>
+</ul>
+<p>
+ Chores:
+</p>
+<ul>
+ <li>
+  Solved deprecation notices in CI regarding the use of the Twig spaceless-filter (#2229)
+ </li>
 </ul>
 <h2 id="version-230">
  Version 2.3.0
