deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -246,6 +246,9 @@ See the
  <li>
   Run ob_end_clean() on configuration file parsing error (#2219)
  </li>
+ <li>
+  Fixed an incorrect exception message when string-style endpoints are used.
+ </li>
 </ul>
 <p>
  <code>
