deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -249,6 +249,9 @@ See the
  <li>
   Fixed an incorrect exception message when string-style endpoints are used.
  </li>
+ <li>
+  Reduced all of the overhead logging related to HEAD/OPTIONS requests (#2234).
+ </li>
 </ul>
 <p>
  <code>
