--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -249,6 +249,9 @@ See the
  <li>
   Fixed an incorrect exception message when string-style endpoints are used.
  </li>
+ <li>
+  Reduced all of the overhead logging related to HEAD/OPTIONS requests (#2234).
+ </li>
 </ul>
 <p>
  <code>
