deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-232">
+      Version 2.3.2
+     </a>
+    </li>
+    <li>
      <a href="#version-231">
       Version 2.3.1
      </a>
@@ -222,11 +227,17 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-232">
+ Version 2.3.2
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-231">
  Version 2.3.1
 </h2>
 <p>
- Released TBD
+ Released 2024-09-05
 </p>
 <ul>
  <li>
