deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -233,6 +233,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fixed a regression that led to fonts &amp; icons not being loaded correctly (#2237)
+ </li>
+</ul>
 <h2 id="version-231">
  Version 2.3.1
 </h2>
