--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -237,6 +237,9 @@ See the
  <li>
   Fixed a regression that led to fonts &amp; icons not being loaded correctly (#2237)
  </li>
+ <li>
+  Fixed a regression that caused the languages in the language-bar to be all in English.
+ </li>
 </ul>
 <h2 id="version-231">
  Version 2.3.1
