--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-233">
+      Version 2.3.3
+     </a>
+    </li>
+    <li>
      <a href="#version-232">
       Version 2.3.2
      </a>
@@ -227,11 +232,17 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-233">
+ Version 2.3.3
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-232">
  Version 2.3.2
 </h2>
 <p>
- Released TBD
+ Released 2024-09-06
 </p>
 <ul>
  <li>
