--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -252,6 +252,16 @@ See the
   Fixed a regression that caused the languages in the language-bar to be all in English.
  </li>
 </ul>
+<p>
+ <code>
+  admin
+ </code>
+</p>
+<ul>
+ <li>
+  Only load metadata-converter.js when file-upload is enabled.
+ </li>
+</ul>
 <h2 id="version-231">
  Version 2.3.1
 </h2>
