deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -238,6 +238,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix regression in metadata converter clipboard-button (#2253)
+ </li>
+</ul>
 <h2 id="version-232">
  Version 2.3.2
 </h2>
