--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -238,6 +238,11 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Fix regression in metadata converter clipboard-button (#2253)
+ </li>
+</ul>
 <h2 id="version-232">
  Version 2.3.2
 </h2>
