deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-developer-information.html
+++ b/2.3/simplesamlphp-developer-information.html
@@ -155,6 +155,11 @@
       </li>
      </ul>
     </li>
+    <li>
+     <a href="#making-a-release">
+      Making a release
+     </a>
+    </li>
    </ul>
   </li>
  </ul>
@@ -459,6 +464,16 @@ details of the syntax formatting.
 <p>
  You will probably want to make a script or alias to the above command
 and apply it before pushing documentation changes to github.
+</p>
+<h2 id="making-a-release">
+ Making a release
+</h2>
+<p>
+ The release process is documented on the wiki
+ <a href="https://github.com/simplesamlphp/simplesamlphp/wiki/Release-process">
+  https://github.com/simplesamlphp/simplesamlphp/wiki/Release-process
+ </a>
+ .
 </p>
 </main></body>
 </html>
