deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -217,6 +217,9 @@ See the
   </code>
   to null
  </li>
+ <li>
+  Fix typo that caused the metadata file-upload to be hidden (#2271)
+ </li>
 </ul>
 <p>
  <code>
