--- a/2.2/simplesamlphp-changelog.html
+++ b/2.2/simplesamlphp-changelog.html
@@ -220,6 +220,9 @@ See the
  <li>
   Run ob_end_clean() on configuration file parsing error (#2219)
  </li>
+ <li>
+  Fix typo that caused the metadata file-upload to be hidden (#2271)
+ </li>
 </ul>
 <p>
  <code>
