--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -201,6 +201,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix metadata-viewer to output a valid PHP array
  </li>
+ <li>
+  Fix typo that caused the metadata file-upload to be hidden (#2271)
+ </li>
 </ul>
 <h2 id="version-2013">
  Version 2.0.13
