--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -242,6 +242,9 @@ See the
  <li>
   Fix regression in metadata converter clipboard-button (#2253)
  </li>
+ <li>
+  Fix typo that caused the metadata file-upload to be hidden (#2271)
+ </li>
 </ul>
 <h2 id="version-232">
  Version 2.3.2
