--- a/devel/simplesamlphp-idp.html
+++ b/devel/simplesamlphp-idp.html
@@ -575,8 +575,18 @@ This is a minimal example of a
  <pre><span></span><code><span class="cp">&lt;?php</span>
 
 <span class="nv">$metadata</span><span class="p">[</span><span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/metadata.php/default-sp'</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
-    <span class="s1">'AssertionConsumerService'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp'</span><span class="p">,</span>
-    <span class="s1">'SingleLogoutService'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-logout.php/default-sp'</span><span class="p">,</span>
+    <span class="s1">'AssertionConsumerService'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+        <span class="p">[</span>
+            <span class="s1">'Location'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-acs.php/default-sp'</span><span class="p">,</span>
+            <span class="s1">'Binding'</span> <span class="o">=&gt;</span> <span class="s1">'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'</span><span class="p">,</span>
+        <span class="p">],</span>
+    <span class="p">],</span>
+    <span class="s1">'SingleLogoutService'</span> <span class="o">=&gt;</span> <span class="p">[</span>
+        <span class="p">[</span>
+            <span class="s1">'Location'</span> <span class="o">=&gt;</span> <span class="s1">'https://sp.example.org/simplesaml/module.php/saml/sp/saml2-logout.php/default-sp'</span><span class="p">,</span>
+            <span class="s1">'Binding'</span> <span class="o">=&gt;</span> <span class="s1">'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect'</span><span class="p">,</span>
+        <span class="p">],</span>
+    <span class="p">],</span>
 <span class="p">];</span>
 </code></pre>
 </div>
