--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -190,7 +190,7 @@ See the upgrade notes for specific information about upgrading.
  Version 2.0.14
 </h2>
 <p>
- Released TBD
+ Released 2024-10-30
 </p>
 <p>
  <code>
