--- a/devel/simplesamlphp-developer-information.html
+++ b/devel/simplesamlphp-developer-information.html
@@ -160,6 +160,11 @@
       Making a release
      </a>
     </li>
+    <li>
+     <a href="#dependbot">
+      Dependbot
+     </a>
+    </li>
    </ul>
   </li>
  </ul>
@@ -474,6 +479,20 @@ and apply it before pushing documentation changes to github.
   https://github.com/simplesamlphp/simplesamlphp/wiki/Release-process
  </a>
  .
+</p>
+<h2 id="dependbot">
+ Dependbot
+</h2>
+<p>
+ The dependbot
+ <a href="https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates">
+  https://docs.github.com/en/code-security/dependabot/dependabot-security-updates/configuring-dependabot-security-updates
+ </a>
+ runs on the master branch
+and creates pull requests with recommended updates.
+</p>
+<p>
+ The release branches are updated automatically as part of the release process.
 </p>
 </main></body>
 </html>
