--- a/devel/simplesamlphp-reference-idp-remote.html
+++ b/devel/simplesamlphp-reference-idp-remote.html
@@ -584,9 +584,9 @@
   Endpoint URL for logout requests and responses. You should obtain this from the IdP. Users who log out from your service is redirected to this URL with the LogoutRequest using HTTP-REDIRECT.
  </dd>
  <dd>
-  The value of this option is specified in one of several
+  The value of this option is specified in the format shown in
   <a href="./simplesamlphp-metadata-endpoints.html">
-   endpoint formats
+   endpoint format
   </a>
   .
  </dd>
@@ -611,9 +611,9 @@
   Endpoint URL for sign on. You should obtain this from the IdP. For SAML 2.0, SimpleSAMLphp will use the HTTP-Redirect binding when contacting this endpoint.
  </dd>
  <dd>
-  The value of this option is specified in one of several
+  The value of this option is specified in the format shown in
   <a href="./simplesamlphp-metadata-endpoints.html">
-   endpoint formats
+   endpoint format
   </a>
   .
  </dd>
