deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/simplesamlphp-upgrade-notes.html
+++ b/devel/simplesamlphp-upgrade-notes.html
@@ -102,6 +102,16 @@ from older versions of SimpleSAMLphp:
 </p>
 <ul>
  <li>
+  <a href="simplesamlphp-upgrade-notes-2.4.html">
+   Upgrade notes for version 2.4
+  </a>
+ </li>
+ <li>
+  <a href="simplesamlphp-upgrade-notes-2.3.html">
+   Upgrade notes for version 2.3
+  </a>
+ </li>
+ <li>
   <a href="simplesamlphp-upgrade-notes-2.2.html">
    Upgrade notes for version 2.2
   </a>
