deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-developer-information.html
+++ b/2.3/simplesamlphp-developer-information.html
@@ -428,6 +428,22 @@ might like to make the pull request against the simplesamlphp-2.1
 branch and leave it to the team to also apply it to master and other
 branches in the same way that code updates work.
 </p>
+<p>
+ Some docs offered under the
+ <code>
+  docs
+ </code>
+ directory on the web site come from modules.
+For example the
+ <a href="https://simplesamlphp.org/docs/2.3/saml/sp.html">
+  saml module
+ </a>
+ file comes from the file
+ <code>
+  ./modules/saml/docs/sp.md
+ </code>
+ in the git repository.
+</p>
 <h3 id="documentation-linting">
  Documentation linting
 </h3>
