deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -347,12 +347,12 @@ The following attributes are available:
   </code>
  </dt>
  <dd>
-  List of Assertion Consumer Services in the generated metadata. Specified in the array of
-  arrays format as seen in the
-  <a href="../simplesamlphp-metadata-endpoints.html">
+  List of Assertion Consumer Services in the generated metadata. Specified in the format detailed in the
+  <a href="./simplesamlphp-metadata-endpoints.html">
    Metadata endpoints
   </a>
-  documentation. Note that this list is taken at face value, so it's not useful to list
+  documentation. 
+  Note that this list is taken at face value, so it's not useful to list
   anything here that the SP auth source does not actually support (unless the URLs point
   externally).
  </dd>
