--- a/stable/saml/sp.html
+++ b/stable/saml/sp.html
@@ -347,14 +347,17 @@ The following attributes are available:
   </code>
  </dt>
  <dd>
-  List of Assertion Consumer Services in the generated metadata. Specified in the array of
-  arrays format as seen in the
-  <a href="./simplesamlphp-metadata-endpoints.html">
-   Metadata endpoints
-  </a>
-  documentation. Note that this list is taken at face value, so it's not useful to list
-  anything here that the SP auth source does not actually support (unless the URLs point
-  externally).
+  <p>
+   List of Assertion Consumer Services in the generated metadata.
+  Specified in the format detailed in the
+   <a href="./simplesamlphp-metadata-endpoints.html">
+    Metadata endpoints
+   </a>
+   documentation.
+  Note that this list is taken at face value, so it's not useful to
+  list anything here that the SP auth source does not actually
+  support (unless the URLs point externally).
+  </p>
  </dd>
  <dt>
   <code>
