deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/devel/simplesamlphp-reference-sp-remote.html
+++ b/devel/simplesamlphp-reference-sp-remote.html
@@ -332,9 +332,9 @@
   responses back to the SP.
  </dd>
  <dd>
-  The value of this option is specified in one of several
+  The value of this option is specified the format detailed in
   <a href="./simplesamlphp-metadata-endpoints.html">
-   endpoint formats
+   endpoint format
   </a>
   .
  </dd>
@@ -803,9 +803,9 @@
   out automatically when a single logout operation is initialized.
  </dd>
  <dd>
-  The value of this option is specified in one of several
+  The value of this option is specified in the format detailed in
   <a href="./simplesamlphp-metadata-endpoints.html">
-   endpoint formats
+   endpoint format
   </a>
   .
  </dd>
