--- a/stable/multiauth/multiauth.html
+++ b/stable/multiauth/multiauth.html
@@ -98,8 +98,28 @@
 </h1>
 <p>
  The MultiAuth module provides a method for users to choose between
-a list of authentication sources. There is only one authentication
-module:
+a list of authentication sources.
+</p>
+<p>
+ If you are looking to have your web application offer multiple
+identity providers during login this is not the module you should be
+using. For that case you should setup a single saml:SP authsource that
+you can call from
+ <code>
+  \SimpleSAML\Auth\Simple
+ </code>
+ . If you have multiple
+remote IdP's the discovery service will ask you which one to use.
+</p>
+<p>
+ <code>
+  multiauth
+ </code>
+ is meant to be used as a selector for different
+authentication methods.
+</p>
+<p>
+ There is only one authentication module:
 </p>
 <dl>
  <dt>
