deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -104,6 +104,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-234">
+      Version 2.3.4
+     </a>
+    </li>
+    <li>
      <a href="#version-233">
       Version 2.3.3
      </a>
@@ -232,11 +237,34 @@ See the
  </a>
  for specific information about upgrading.
 </p>
+<h2 id="version-234">
+ Version 2.3.4
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-233">
  Version 2.3.3
 </h2>
 <p>
- Released TBD
+ Released 2024-11-16
+</p>
+<ul>
+ <li>
+  Fix
+  <code>
+   st
+  </code>
+  -language by updating the ICU-files (#2305)
+ </li>
+ <li>
+  Fix docs and configuration examples regarding SSO-endpoints.
+ </li>
+</ul>
+<p>
+ <code>
+  admin
+ </code>
 </p>
 <ul>
  <li>
@@ -244,6 +272,16 @@ See the
  </li>
  <li>
   Fix typo that caused the metadata file-upload to be hidden (#2271)
+ </li>
+</ul>
+<p>
+ <code>
+  discopower
+ </code>
+</p>
+<ul>
+ <li>
+  Throw a meaningful exception when tags contain illegal characters (v1.4.1)
  </li>
 </ul>
 <h2 id="version-232">
