deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.3/simplesamlphp-changelog.html
+++ b/2.3/simplesamlphp-changelog.html
@@ -284,6 +284,16 @@ See the
   Throw a meaningful exception when tags contain illegal characters (v1.4.1)
  </li>
 </ul>
+<p>
+ <code>
+  ldap
+ </code>
+</p>
+<ul>
+ <li>
+  Fix a missing negation that rendered multi-ldap broken (v2.3.7)
+ </li>
+</ul>
 <h2 id="version-232">
  Version 2.3.2
 </h2>
