deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/contrib_modules/casserver/ChangeLog.html
+++ b/contrib_modules/casserver/ChangeLog.html
@@ -460,7 +460,7 @@
   module_sbcasserver.php
  </li>
  <li>
-  The files in www has all beed changed to use the new "namespace".
+  The files in www has all been changed to use the new "namespace".
  </li>
 </ul>
 </main></body>
