deploy: 9878bd422acbe79f6f2604b79413af66c562a896

--- a/2.1/simplesamlphp-install.html
+++ b/2.1/simplesamlphp-install.html
@@ -687,6 +687,7 @@ look like this:
  <pre><span></span><code><span class="k">server</span><span class="w"> </span><span class="p">{</span>
 <span class="w">    </span><span class="kn">listen</span><span class="w"> </span><span class="mi">443</span><span class="w"> </span><span class="s">ssl</span><span class="p">;</span>
 <span class="w">    </span><span class="kn">server_name</span><span class="w"> </span><span class="s">idp.example.com</span><span class="p">;</span>
+<span class="w">    </span><span class="kn">index</span><span class="w"> </span><span class="s">index.php</span><span class="p">;</span>
 
 <span class="w">    </span><span class="kn">ssl_certificate</span><span class="w">        </span><span class="s">/etc/pki/tls/certs/idp.example.com.crt</span><span class="p">;</span>
 <span class="w">    </span><span class="kn">ssl_certificate_key</span><span class="w">    </span><span class="s">/etc/pki/tls/private/idp.example.com.key</span><span class="p">;</span>
