--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -243,6 +243,24 @@ See the
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Attributes translations are now in the "attributes" domain (#2328).
+ </li>
+ <li>
+  Add
+  <code>
+   index
+  </code>
+  directive to Nginx example configuration (#2329).
+ </li>
+ <li>
+  Better error message when using legacy endpoints format (#2335).
+ </li>
+ <li>
+  Some minor improvements to the changes in 2.3.3.
+ </li>
+</ul>
 <h2 id="version-233">
  Version 2.3.3
 </h2>
